--- a/js3/index.html
+++ b/js3/index.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Exercise 3</title>
+    <title>JS-Basics 3</title>
 </head>
 <body>
-    <h1>JS Exercise 3</h1>
+    <h1>JS Basics 3</h1>
+    <table>
+        <tr>
+            <td>
+                <label for="num">Enter a Number:</label>
+            </td>
+            <td>
+                <input type="text" id="num" placeholder="Enter a number">
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <button id="insertBtn">Insert</button>
+                <button id="deleteBtn">Delete All</button>
+            </td>
+        </tr>
+    </table>
 
-                <label for="num1">Enter a Number: </label>
-                <input type="number" id="numberinput">
-                <button onlick="deleteAll()">Delete All</button>"
+    <p style="font-weight: bold;">Numbers:</p>
+    <p id="element"></p>
 
-                <p>Numbers:</p>
-                <div id="numberList"></div>
+    <p>Sum: <span id="sum" style="color: blue; font-weight: bold;"></span></p>
+    <p>Highest: <span id="high" style="color: green; font-weight: bold;"></span></p>
+    <p>Lowest: <span id="low" style="color: red; font-weight: bold;"></span></p>
 
-                <p>Sum: <span id="sum" class="blue">0</span> </p>
-                <p>Highest: <span id="highest" class="blue">0</span> </p>
-                <p>Lowest: <span id="lowest" class="blue">0</span> </p>    
+    <script src="main.js"></script>
 </body>
 </html>
