--- a/js3/index.html
+++ b/js3/index.html
@@ -6,7 +6,7 @@
     <title>JS-Basics 3</title>
 </head>
 <body>
-    <h1>JS Basics 3</h1>
+    <h1>JS Exercise 3</h1>
     <table>
         <tr>
             <td>
